Fix tags column spacing, wrapping and max height

--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,7 @@ input[type="text"] {
   flex-direction: row;
   scale: 100%;
   transition: all 0.2s ease-in-out;
+  gap: 0.2em;
 
   padding-top: 0.3em;
   padding-bottom: 0.3em;
@@ -183,6 +184,7 @@ input[type="text"] {
 }
 
 .tag-buttons {
+  display: flex;
   margin-left: 0.3em;
   order: 1;
   flex-direction: row;
@@ -193,7 +195,7 @@ input[type="text"] {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  max-height: 512px;
+  max-height: 100%;
   width: 100%;
   border: none;
   border-radius: 0.3em;
@@ -204,8 +206,6 @@ input[type="text"] {
   order: 2;
   display: flex;
   flex-direction: row;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
 }
 
 .wiki-link {
